# two_odd_annotator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
configs/: default_config.yml  filter.yml  filter_seq_sim.yml  sp_name_correction.json  up_to_date_species_name.yaml
data/2ODDs/: 2ODD_domain.hmm  bait_sequence_collection.fasta  char_baits.xlsx  characterized_2ODDs.fasta  characterized_2ODDs_MSA.fasta  characterized_2ODDs_MSA_trim.fasta  characterized_2ODDs_no_paralogs.fasta  characterized_2ODDs_tree.nwk  dmnd_ref_db.dmnd  ingroup_reduced.fasta  ingroup_reduced.json  ingroup_reduced_MSA_trim.fasta  ingroup_reduced_tree.nwk  major_2ODD_char_info.json  major_char_2ODD_info.json  major_minor_2ODD_clusters_manual.json  major_minor_2ODD_ids.json  major_minor_2ODD_ids_manual.json
data/2ODDs/blast_ref_db/: 2ODD_ref_db.phr  2ODD_ref_db.pin  2ODD_ref_db.pjs
data/blast_ref_db/: 2ODD_ref_db.phr  2ODD_ref_db.pin
data/char_2ODDs/: 2ODD_domain.hmm
data/char_2ODDs/blast_ref_db/: 2ODD_ref_db.pjs  2ODD_ref_db.psq  (+1 more)
data/plotting/: rank_order_for_summary_plot.nwk
src/two_odd_annotator/: cli.py  constants.py  filter.py  seq_sim_filter.py
tests/: test_cli_threads.py  test_filter.py
tests/config/: major_2ODD_char_info.json  test_config.yml
tests/data/: Arabidopsis_thaliana.fasta  Arabidopsis_thaliana.pep.fasta  Echinochloa_crus_galli.pep.fasta  filter.yml  test_anno_tree.nwk  test_nested_tree.nwk
tests/pipeline/: test_runner.py  test_state.py  test_state_species_name_mapping.py
tests/results/: annotation.fasta  annotation_msa.fasta  annotation_msa_trim.fasta  annotation_tree.nwk
tests/services/: test_analyze_xtick_labels.py  test_annotate.py  test_filter.py  test_seq_sim_filter.py  test_vizualize.py
tests/utils/: test_io.py  test_logging.py  test_metadata.py
(+33 files in other folders)
