[project]
name = "two-odd-annotator"
version = "0.1.0"
description = "Automatic annotation of plant protein sequences to 2-oxoglutarate/Fe(II)-dependent dioxygenases (2ODD) functionality"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "biopython>=1.86",
    "ete4>=4.4.0",
    "pandas>=3.0.1",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
annodd = "two_odd_annotator.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
